--- a/products/org.palladiosimulator.product/pom.xml
+++ b/products/org.palladiosimulator.product/pom.xml
@@ -8,7 +8,7 @@
 		<artifactId>products</artifactId>
 		<version>0.1.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>palladiosimulator.bench</artifactId>
+	<artifactId>org.palladiosimulator.bench.product</artifactId>
 	<packaging>eclipse-repository</packaging>
 
 	<properties>
