--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 	<packaging>pom</packaging>
 	
 	<modules>
+		<module>bundles</module>
 		<module>features</module>
 		<module>products</module>
 	</modules>
