--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.palladiosimulator</groupId>
-		<artifactId>eclipse-parent</artifactId>
-		<version>0.1.9</version>
+		<artifactId>eclipse-parent-product</artifactId>
+		<version>0.3.1</version>
 	</parent>
 	<groupId>org.palladiosimulator.bench</groupId>
 	<artifactId>parent</artifactId>	
@@ -14,7 +14,6 @@
 	<packaging>pom</packaging>
 	
 	<modules>
-		<module>bundles</module>
 		<module>features</module>
 		<module>products</module>
 	</modules>
@@ -35,9 +34,14 @@
 					<url>https://sdqweb.ipd.kit.edu/eclipse/palladiosimulator/nightly</url>
 				</repository>
 				<repository>
-					<id>eclipse-photon</id>
+					<id>pcm-workarounds</id>
 					<layout>p2</layout>
-					<url>http://download.eclipse.org/releases/photon/</url>
+					<url>https://sdqweb.ipd.kit.edu/eclipse/palladio/supporting/workarounds/nightly</url>
+				</repository>
+				<repository>
+					<id>eclipse-2019-06</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/releases/2019-06/</url>
 				</repository>
 			</repositories>
 		</profile>
@@ -56,9 +60,14 @@
 					<url>https://sdqweb.ipd.kit.edu/eclipse/palladiosimulator/releases/latest</url>
 				</repository>
 				<repository>
-					<id>eclipse-photon</id>
+					<id>pcm-workarounds</id>
 					<layout>p2</layout>
-					<url>http://download.eclipse.org/releases/photon/</url>
+					<url>https://sdqweb.ipd.kit.edu/eclipse/palladio/supporting/workarounds/releases/latest</url>
+				</repository>
+				<repository>
+					<id>eclipse-2019-06</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/releases/2019-06/</url>
 				</repository>
 			</repositories>
 		</profile>
