--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.palladiosimulator</groupId>
-		<artifactId>eclipse-parent</artifactId>
-		<version>0.1.9</version>
+		<artifactId>eclipse-parent-product</artifactId>
+		<version>0.1.5</version>
 	</parent>
 	<groupId>org.palladiosimulator.bench</groupId>
 	<artifactId>parent</artifactId>	
@@ -14,7 +14,6 @@
 	<packaging>pom</packaging>
 	
 	<modules>
-		<module>bundles</module>
 		<module>features</module>
 		<module>products</module>
 	</modules>
