--- a/pom.xml
+++ b/pom.xml
@@ -34,9 +34,9 @@
 					<url>https://updatesite.palladio-simulator.com/palladio-build-updatesite/nightly/</url>
 				</repository>
 				<repository>
-					<id>eclipse-2020-12</id>
+					<id>eclipse-2021-06</id>
 					<layout>p2</layout>
-					<url>http://download.eclipse.org/releases/2020-12/</url>
+					<url>https://download.eclipse.org/releases/2021-06/</url>
 				</repository>
 			</repositories>
 		</profile>
@@ -55,9 +55,9 @@
 					<url>https://updatesite.palladio-simulator.com/palladio-build-updatesite/releases/latest</url>
 				</repository>
 				<repository>
-					<id>eclipse-2020-12</id>
+					<id>eclipse-2021-06</id>
 					<layout>p2</layout>
-					<url>http://download.eclipse.org/releases/2020-12/</url>
+					<url>https://download.eclipse.org/releases/2021-06/</url>
 				</repository>
 			</repositories>
 		</profile>
