--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 				<repository>
 					<id>pcm-nightly</id>
 					<layout>p2</layout>
-					<url>https://updatesite.palladio-simulator.com/palladio-build-updatesite/nightly/</url>
+					<url>https://updatesite.palladio-simulator.com/palladio-build-updatesite/releases/5.1.0/</url>
 				</repository>
 				<repository>
 					<id>eclipse-2021-12</id>
@@ -52,7 +52,7 @@
 				<repository>
 					<id>pcm-latest</id>
 					<layout>p2</layout>
-					<url>https://updatesite.palladio-simulator.com/palladio-build-updatesite/releases/latest</url>
+					<url>https://updatesite.palladio-simulator.com/palladio-build-updatesite/releases/5.1.0/</url>
 				</repository>
 				<repository>
 					<id>eclipse-2021-12</id>
