--- a/pom.xml
+++ b/pom.xml
@@ -31,12 +31,12 @@
 				<repository>
 					<id>pcm-nightly</id>
 					<layout>p2</layout>
-					<url>https://updatesite.palladio-simulator.com/palladio-build-updatesite/nightly/</url>
+					<url>https://updatesite.palladio-simulator.com/palladio-build-updatesite/branches/release5.2.0/</url>
 				</repository>
 				<repository>
-					<id>eclipse-2022-12</id>
+					<id>eclipse-2023-06</id>
 					<layout>p2</layout>
-					<url>https://download.eclipse.org/releases/2022-12/</url>
+					<url>https://download.eclipse.org/releases/2023-06/</url>
 				</repository>
 			</repositories>
 		</profile>
@@ -55,9 +55,9 @@
 					<url>https://updatesite.palladio-simulator.com/palladio-build-updatesite/releases/latest</url>
 				</repository>
 				<repository>
-					<id>eclipse-2022-12</id>
+					<id>eclipse-2023-06</id>
 					<layout>p2</layout>
-					<url>https://download.eclipse.org/releases/2022-12/</url>
+					<url>https://download.eclipse.org/releases/2023-06/</url>
 				</repository>
 			</repositories>
 		</profile>
