--- a/products/org.palladiosimulator.product/pom.xml
+++ b/products/org.palladiosimulator.product/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.palladiosimulator.bench</groupId>
 		<artifactId>products</artifactId>
-		<version>5.2.1-SNAPSHOT</version>
+		<version>5.2.2</version>
 	</parent>
 	<artifactId>org.palladiosimulator.bench.product</artifactId>
 	<packaging>eclipse-repository</packaging>
