--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 				<repository>
 					<id>pcm-nightly</id>
 					<layout>p2</layout>
-					<url>https://updatesite.palladio-simulator.com/palladio-build-updatesite/nightly/</url>
+					<url>https://updatesite.palladio-simulator.com/palladio-build-updatesite/releases/5.2.2/</url>
 				</repository>
 				<repository>
 					<id>eclipse-2023-03</id>
