--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>org.palladiosimulator.bench</groupId>
 	<artifactId>parent</artifactId>	
-	<version>5.2.2</version>
+	<version>6.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	
 	<modules>
@@ -44,7 +44,7 @@
 				<repository>
 					<id>pcm-nightly</id>
 					<layout>p2</layout>
-					<url>https://updatesite.palladio-simulator.com/palladio-build-updatesite/releases/5.2.2/</url>
+					<url>https://updatesite.palladio-simulator.com/palladio-build-updatesite/nightly/</url>
 				</repository>
 				<repository>
 					<id>eclipse-2023-03</id>
